--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 body {
 	font-family: Jost, Arial, Helvetica, sans-serif;
@@ -13,33 +14,65 @@ body {
 	word-break: break-word;
 }
 
-/* background-color: black;
-	color: antiquewhite;
-	font-family: 'Jost', sans-serif;
-	 */
+.mainbox {
+	box-sizing: border-box;
+}
 
-/* .mainbox {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.Container {
+	padding: 100px 0;
 }
+
+.Right_Box {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: flex-end;
+}
+
+.Left_Box {
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	justify-content: center;
+	position: absolute;
+	top: 5vw;
+	left: 5vw;
+}
+
 .right_container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	width: 44%;
+	min-height: 100vh;
+	position: fixed;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border-left: 1px solid rgba(255, 255, 255, .2);
+	transition: all .5s ease;
 }
-.left_container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-} */
+
+.myimg {
+	height: auto;
+	width: 23vw;
+	position: relative;
+	top: 50px;
+	left: 30px;
+}
+
 nav ul li {
 	display: inline;
 }
-.myimg {
-	height: auto;
-	width: 40vw;
+
+.left_container {
+	width: 56%;
+	min-height: 100vh;
+	position: relative;
+	overflow-x: hidden;
+	float: none;
+	clear: none;
+	transition: all .5s ease;
+	margin-left: 12px;
 }
+
 .title {
 	font-family: 'Jost', sans-serif;
 	font-size: 48px;
@@ -49,11 +82,14 @@ nav ul li {
 	color: #987750;
 	font-size: 18px;
 }
+
 .resumo_desc {
 	line-height: 44px;
 	font-size: 30px;
 	color: #888;
+	width: 45vw;
 }
+
 h1,
 h2,
 h3,
@@ -62,15 +98,18 @@ h5,
 h6 {
 	color: #ddd;
 }
+
 h3 {
 	margin: 0 0 18px;
 }
+
 .services_container .item {
 	width: 100%;
 	display: flex;
 	background-color: #181715;
 	border: 1px solid #151412;
 }
+
 .item {
 	width: 100%;
 	float: left;
@@ -80,12 +119,17 @@ h3 {
 	padding: 42px 40px 43px;
 	border: 1px solid #151412;
 }
+
 .item_top {
 	display: flex;
 	margin-bottom: 14px;
 }
 
 .tab_header {
+	margin-bottom: 39px;
+}
+
+.tabs .tab_header ul {
 	margin: 0;
 	padding: 0;
 	display: flex;
@@ -96,10 +140,107 @@ h3 {
 
 .tab_header ul li {
 	display: inline;
+	padding: 0;
+	margin: 0 0 10px;
+	position: relative;
+}
+.tab_header a {
+	text-decoration: none;
+	display: inline-block;
+	color: #888;
+	font-weight: 400;
+	font-size: 30px;
+	border-bottom: 1px solid transparent;
+	line-height: 30px;
+	padding-top: 4px;
+	margin-right: 10px;
 }
 
+.item_top {
+	display: flex;
+	margin-bottom: 14px;
+}
 .item_top h5 {
 	font-size: 18px;
 	text-transform: uppercase;
 	line-height: 30px;
+}
+
+.Home_container {
+	display: flex;
+	flex-direction: column;
+}
+
+.Right_Box {
+	display: flex;
+}
+
+.subtitle {
+	padding: 0;
+	font-size: 18px;
+	text-transform: uppercase;
+	font-weight: 500;
+	letter-spacing: 1px;
+	color: #987750;
+	margin: 0 0 54px;
+}
+
+table tr {
+	border: none;
+}
+
+table th:first-child {
+	letter-spacing: 1px;
+	color: #888;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
+table th {
+	padding: 9px 10px 9px 0;
+	font-size: 18px;
+	letter-spacing: 0;
+	color: #ddd;
+	font-weight: 400;
+}
+
+table a {
+	text-decoration: none;
+	color: #ddd;
+	position: relative;
+	border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+
+a {
+	text-decoration: none;
+	color: #ddd;
+}
+
+.about_info {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 126px;
+}
+
+.boxed_list h3 {
+	font-size: 30px;
+	padding: 0;
+	font-weight: 400;
+	margin: 0 0 17px;
+}
+
+.boxed_list li {
+	padding: 0;
+	width: 100%;
+	float: left;
+	clear: both;
+	margin: 0 0 20px;
+}
+.boxed_list .item_top span {
+	display: block;
+	padding: 0;
+	font-size: 16px;
+	line-height: 30px;
+	margin: 0 0 0 20px;
+	color: #888;
 }
