--- a/Css/styles.css
+++ b/Css/styles.css
@@ -76,6 +76,7 @@ nav ul li {
 .title {
 	font-family: 'Jost', sans-serif;
 	font-size: 48px;
+	font-weight: 400;
 }
 
 .subtitle {
@@ -243,4 +244,188 @@ a {
 	line-height: 30px;
 	margin: 0 0 0 20px;
 	color: #888;
+}
+
+.Portfolio_container .title {
+	font-weight: 400;
+	letter-spacing: 0;
+	padding: 0 0 15px;
+	margin: 0 0 34px;
+	position: relative;
+}
+
+.Cards {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: row;
+}
+
+.card img {
+	height: 211px;
+	width: 277px;
+}
+
+.Services_container .item {
+	width: 100%;
+	display: flex;
+	background-color: #181715;
+	border: 1px solid #151412;
+}
+
+.item_left {
+	padding: 42px 40px 43px;
+	position: relative;
+	width: 100%;
+}
+
+.item_left p {
+	max-width: 400px;
+	margin: 0;
+	padding: 0;
+	letter-spacing: 0;
+	font-size: 18px;
+}
+
+.item_left h3 {
+	padding: 0;
+	font-weight: 400;
+	margin: 0 0 18px;
+	font-size: 30px;
+}
+
+.item_right {
+	width: 30%;
+	min-width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	border-left: 1px solid rgba(255, 255, 255, .05);
+	padding: 10px;
+}
+
+.item_right h3 {
+	margin: 0;
+	padding: 0;
+	color: #987750;
+	font-weight: 500;
+	font-size: 24px;
+}
+
+#customers {
+	padding: 150px 0 42px;
+}
+
+.partners {
+	margin-bottom: 139px;
+}
+
+.partners ul {
+	padding: 0;
+	list-style-type: none;
+	margin: 0 0 0 -10px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.partners li {
+	width: 33.3333%;
+	padding: 0 0 0 10px;
+	margin: 0 0 10px;
+}
+
+.partners li img {
+	width: 220px;
+}
+
+.partners a {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	height: 200px;
+	padding: 15px;
+	text-align: center;
+	background-color: #181715;
+}
+
+.testimonial .resumo_desc {
+	padding: 0;
+	font-size: 30px;
+	line-height: 44px;
+	font-weight: 400;
+	margin: 0 0 52px;
+}
+
+.testimonial .title {
+	padding: 0;
+	font-size: 30px;
+	font-weight: 400;
+	margin: 0 0 9px;
+}
+
+.testimonial .subtitle {
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	color: #888;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+#NewsTips {
+	padding: 150px 0 47px;
+}
+
+.blog_list ul {
+	padding: 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: 0 0 0 -60px;
+	list-style-type: none;
+}
+
+.blog_list li {
+	width: 50%;
+	padding: 0 0 0 60px;
+	margin: 0 0 44px;
+}
+
+.modal_item {
+	cursor: pointer;
+}
+
+.blog_list .img_holder {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.blog_list .img_holder img {
+	margin-bottom: -24%;
+	height: 377px;
+	width: 377px;
+}
+
+.blog_list .title_holder {
+	padding-top: 25px;
+}
+
+.blog_list .title_holder p {
+	padding: 0;
+	margin: 0 0 9px;
+	font-size: 14px;
+	text-transform: uppercase;
+}
+
+.blog_list .title_holder h3 {
+	margin: 0;
+	padding: 0;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 26px;
 }
